ignore files updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 prabal
+durable-kingdom-456901-u8-db29a531aa4f.json
+flask-62adb-firebase-adminsdk-fbsvc-5a7c22f9cc.json
+flask-62adb-firebase-adminsdk-fbsvc-94d4843991.json
+__pycache__
+output.mp3
