--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ durable-kingdom-456901-u8-db29a531aa4f.json
 flask-62adb-firebase-adminsdk-fbsvc-5a7c22f9cc.json
 routes/__pycache__/
 static/output.mp3
+.gcloudignore
